# quiz_management

./: PLAN.md  README.md
backend/: README.md  pyproject.toml
backend/core/: settings.py  urls.py
backend/quiz/: admin.py  models.py  urls.py  utils.py  views.py
backend/quiz/migrations/: 0001_initial.py
backend/quiz/templates/quiz/: index.html
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/api/: client.js  quizApi.js
frontend/src/components/Loader/: Loader.jsx  Loader.module.css
frontend/src/components/Option/: Option.jsx  Option.module.css
frontend/src/components/Question/: Question.jsx  Question.module.css
frontend/src/components/QuizCard/: QuizCard.jsx  QuizCard.module.css
frontend/src/components/ResultQuestion/: ResultQuestion.jsx  ResultQuestion.module.css
frontend/src/pages/: QuizListPage.jsx  QuizResultPage.jsx  QuizTakePage.jsx
frontend/src/styles/: global.css
